--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.9",
     "css-modulesify": "^0.28.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-flowtype": "^2.42.0",
@@ -41,8 +43,10 @@
     "invariant": "^2.2.2",
     "jest": "^22.1.4",
     "jest-css-modules": "^1.1.0",
+    "jest-environment-jsdom": "^22.2.2",
     "jest-image-snapshot": "^2.3.0",
     "jsdom": "^11.6.2",
+    "jsdom-global": "^3.0.2",
     "lnk": "^1.1.0",
     "lnk-cli": "^1.0.1",
     "lodash": "^4.17.5",
@@ -59,6 +63,7 @@
     "precss": "^2.0.0",
     "prop-types": "^15.6.0",
     "puppeteer": "^0.13.0",
+    "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -66,7 +71,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-test-renderer": "^15.6.2",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
@@ -82,6 +87,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015-ie": "^6.7.0",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
