--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env", "react", "flow"],
-  "plugins": ["transform-decorators-legacy", "transform-runtime"]
+  "presets": [ "env", "react", "flow"],
+  "plugins": ["transform-object-rest-spread", "transform-decorators-legacy", "transform-runtime"]
 }
