--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": [ "env", "react", "flow"],
+  "presets": [ "env", "react", "flow", "stage-0"],
   "plugins": ["transform-object-rest-spread", "transform-decorators-legacy", "transform-runtime"]
 }
